# bosectl-qt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PKGBUILD  PKGBUILD-git  README.md
docs/architecture/: 0001-bluez-battery-provider.md
resources/: bosectl-qt-autostart.desktop  bosectl-qt.desktop  resources.qrc
src/: BluezBatteryProvider.cpp  BluezBatteryProvider.h  BmapWorker.cpp  BmapWorker.h  EqWindow.cpp  EqWindow.h  Logging.cpp  Logging.h  ModeWindow.cpp  ModeWindow.h  NcWindow.cpp  NcWindow.h  Settings.h  TrayIcon.cpp  TrayIcon.h  main.cpp
